--- a/ui/hb-app/src/app/app.component.html
+++ b/ui/hb-app/src/app/app.component.html
@@ -9,109 +9,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Konta bankowe</a>
+        <a class="nav-link" href="/accounts">Konta bankowe</a>
       </li>
     </ul>
   </div>
 </nav>
 
-<div class="container" style="margin-bottom: 50px">
-  <h3>Do końca miesiąca: {{daysPaycheck}} dni</h3>
-</div>
-
-
-<div class="container">
-  <h1>Dom i życie</h1>
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Stan konta</th>
-        <th scope="col">Wydatki planowane</th>
-        <th scope="col">Blokady</th>
-        <th scope="col">Bilans</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">Rachunki i opłaty</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary">{{paymentsAll}}</td>
-      </tr>
-      <tr>
-        <th scope="row">Życie</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary">{{paymentsAll}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<div class="container">
-  <h1>Oszczedności</h1>
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Stan konta</th>
-        <th scope="col">Wydatki planowane</th>
-        <th scope="col">Bilans</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">Poduszka finansowa</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary">{{paymentsAll}}</td>
-      </tr>
-      <tr>
-        <th scope="row">Skarbonka</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary text-danger">-{{paymentsAll}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<div class="container">
-  <h1>Firma</h1>
-
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Stan konta</th>
-        <th scope="col">Wydatki planowane</th>
-        <th scope="col">Bilans</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">Bieżące</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary">{{paymentsAll}}</td>
-      </tr>
-      <tr>
-        <th scope="row">Opłaty / ZUS</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary">{{paymentsAll}}</td>
-      </tr>
-      <tr>
-        <th scope="row">Oszczedności</th>
-        <td>{{paymentsAll}}</td>
-        <td>{{paymentsAll}}</td>
-        <td class="table-secondary">{{paymentsAll}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<router-outlet></router-outlet>
