--- a/ui/hb-app/src/app/component-bank-account/bank-account.component.html
+++ b/ui/hb-app/src/app/component-bank-account/bank-account.component.html
@@ -17,7 +17,7 @@
       <td>{{account.bankName}}</td>
       <td>{{account.accountType}}</td>
       <td>
-        <button (click)="onEditAccount(account.id)">edytuj</button>
+        <button><a routerLink="/accountEdit/{{account.id}}">edytuj</a></button>
       </td>
       <td>
         <button (click)="onDeleteAccount(account.id)">usuń</button>
