--- a/ui/hb-app/src/app/dashboard/dashboard.component.html
+++ b/ui/hb-app/src/app/dashboard/dashboard.component.html
@@ -1,100 +1,8 @@
-<div class="container" style="margin-bottom: 50px">
-  <h3>Do końca miesiąca: {{daysPaycheck}} dni</h3>
-</div>
-
-
-<div class="container">
-  <h1>Dom i życie</h1>
-
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Stan konta</th>
-      <th scope="col">Wydatki planowane</th>
-      <th scope="col">Blokady</th>
-      <th scope="col">Bilans</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">Rachunki i opłaty</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary">{{paymentsAll}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Życie</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary">{{paymentsAll}}</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-
-<div class="container">
-  <h1>Oszczedności</h1>
-
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Stan konta</th>
-      <th scope="col">Wydatki planowane</th>
-      <th scope="col">Bilans</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">Poduszka finansowa</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary">{{paymentsAll}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Skarbonka</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary text-danger">-{{paymentsAll}}</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-
-<div class="container">
-  <h1>Firma</h1>
-
-  <table class="table">
-    <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Stan konta</th>
-      <th scope="col">Wydatki planowane</th>
-      <th scope="col">Bilans</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <th scope="row">Bieżące</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary">{{paymentsAll}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Opłaty / ZUS</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary">{{paymentsAll}}</td>
-    </tr>
-    <tr>
-      <th scope="row">Oszczedności</th>
-      <td>{{paymentsAll}}</td>
-      <td>{{paymentsAll}}</td>
-      <td class="table-secondary">{{paymentsAll}}</td>
-    </tr>
-    </tbody>
-  </table>
+<div class="container" style="margin-top: 24px;">
+  <div class="card" style="padding: 24px;">
+    <h5 class="card-title">Podsumowanie</h5>
+    <h6 class="card-subtitle  mb-2 text-muted">Następny okres rozliczeniowy za: {{daysPaycheck}} dni</h6>
+    <p class="card-text"></p>
+    <app-account-balance></app-account-balance>
+  </div>
 </div>
