--- a/ui/hb-app/src/app/account-balance/account-balance.component.html
+++ b/ui/hb-app/src/app/account-balance/account-balance.component.html
@@ -15,7 +15,12 @@
         <input class="form-control" name="{{bankAccount.id}}"
                [(ngModel)]="bankAccount.currentBalance"
                (change)="hasChanges = true; bankAccount.isChanged = true"
-               [value]="bankAccount.currentBalance"/>
+               [value]="bankAccount.currentBalance"
+               pattern="^[0-9]+(\.[0-9]{2})?$"
+               #bankName="ngModel"/>
+        <div *ngIf="!bankName.valid && !bankName.pristine" class="alert alert-danger">
+          Format kwoty jest niepoprawny. (0-9).(0-9)
+        </div>
       </td>
     </tbody>
   </table>
