Displays all costs in table.

--- a/ui/hb-app/src/app/app.component.html
+++ b/ui/hb-app/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/accounts">Konta bankowe</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/settlements">Wydatki</a>
+      </li>
     </ul>
   </div>
 </nav>
