--- a/ui/hb-app/src/app/settlements/settlements.component.html
+++ b/ui/hb-app/src/app/settlements/settlements.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container" style="margin-top: 20px">
 
-  <button routerLink="/costCreate">Dodaj</button>
+  <!--WYDATKI JEDNORAZOWE-->
+  <h3 class="col-md-9">Operacje cykliczne</h3>
 
   <table class="table">
     <thead>
@@ -22,12 +23,47 @@
       <td>{{cost.name}}</td>
       <td [ngClass]="{
         'text-danger': !isIncoming(cost)
-      }">{{!isIncoming(cost)? -cost.value : cost.value}}</td>
+      }">{{!isIncoming(cost)? -cost.value : cost.value}}
+      </td>
       <td>{{cost.payDate | date:'dd-MM-yyyy'}}</td>
       <td>{{cost.costDirection}}</td>
       <td>{{cost.bankAccount.bankName}}</td>
     </tr>
     </tbody>
   </table>
+  <button type="button" class="btn btn-info" routerLink="/costCreate">Dodaj</button>
+
+  <!--Operacje JEDNORAZOWE-->
+  <h3 class="col-md-9" style="margin-top: 60px">Operacje jednorazowe</h3>
+
+  <table class="table">
+    <thead>
+    <tr>
+      <th></th>
+      <th scope="col">Nazwa</th>
+      <th scope="col">Kwota</th>
+      <th scope="col">Termin</th>
+      <th scope="col">Wych./Przych.</th>
+      <th scope="col">Konto bankowe</th>
+    </tr>
+    </thead>
+    <tbody *ngFor="let cost of costs">
+    <tr>
+      <td [ngClass]="{
+      'table-success': isIncoming(cost),
+      'table-danger' : !isIncoming(cost)
+      }"></td>
+      <td>{{cost.name}}</td>
+      <td [ngClass]="{
+        'text-danger': !isIncoming(cost)
+      }">{{!isIncoming(cost)? -cost.value : cost.value}}
+      </td>
+      <td>{{cost.payDate | date:'dd-MM-yyyy'}}</td>
+      <td>{{cost.costDirection}}</td>
+      <td>{{cost.bankAccount.bankName}}</td>
+    </tr>
+    </tbody>
+  </table>
+  <button type="button" class="btn btn-info" routerLink="/costCreate">Dodaj</button>
 
 </div>
