--- a/ui/hb-app/src/app/app.component.html
+++ b/ui/hb-app/src/app/app.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="/accounts">Konta bankowe</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/settlements">Wydatki</a>
+        <a class="nav-link" href="/transactions">Transakcje</a>
       </li>
     </ul>
   </div>
