--- a/ui/hb-app/src/app/transactions/transactions.component.html
+++ b/ui/hb-app/src/app/transactions/transactions.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="margin-top: 20px">
 
-  <!--WYDATKI JEDNORAZOWE-->
+  <!--TRANSAKCJE CYKLICZNE-->
   <h3 class="col-md-9">Operacje cykliczne</h3>
 
   <table class="table">
@@ -9,25 +9,27 @@
       <th></th>
       <th scope="col">Nazwa</th>
       <th scope="col">Kwota</th>
-      <th scope="col">Termin</th>
+      <th scope="col">Pierwszy termin</th>
+      <th scope="col">Ostatni termin</th>
       <th scope="col">Wych./Przych.</th>
       <th scope="col">Konto bankowe</th>
     </tr>
     </thead>
-    <tbody *ngFor="let cost of costs">
+    <tbody *ngFor="let t of cyclicTransactionDtos">
     <tr>
       <td [ngClass]="{
-      'table-success': isIncoming(cost),
-      'table-danger' : !isIncoming(cost)
+      'table-success': isIncoming(t),
+      'table-danger' : !isIncoming(t)
       }"></td>
-      <td>{{cost.name}}</td>
+      <td>{{t.name}}</td>
       <td [ngClass]="{
-        'text-danger': !isIncoming(cost)
-      }">{{!isIncoming(cost)? -cost.value : cost.value}}
+        'text-danger': !isIncoming(t)
+      }">{{!isIncoming(t)? -t.value : t.value}}
       </td>
-      <td>{{cost.payDate | date:'dd-MM-yyyy'}}</td>
-      <td>{{cost.costDirection}}</td>
-      <td>{{cost.bankAccount.bankName}}</td>
+      <td>{{t.firstPayDate | date:'dd-MM-yyyy'}}</td>
+      <td>{{t.lastPayDate | date:'dd-MM-yyyy'}}</td>
+      <td>{{t.costDirection}}</td>
+      <td>{{t.bankAccountDto != null ? t.bankAccountDto.bankName : ''}}</td>
     </tr>
     </tbody>
   </table>
@@ -47,7 +49,7 @@
       <th scope="col">Konto bankowe</th>
     </tr>
     </thead>
-    <tbody *ngFor="let cost of costs">
+    <tbody *ngFor="let cost of oneTimeTransactionDtos">
     <tr>
       <td [ngClass]="{
       'table-success': isIncoming(cost),
@@ -60,7 +62,7 @@
       </td>
       <td>{{cost.payDate | date:'dd-MM-yyyy'}}</td>
       <td>{{cost.costDirection}}</td>
-      <td>{{cost.bankAccount.bankName}}</td>
+      <td>{{cost.bankAccountDto.bankName}}</td>
     </tr>
     </tbody>
   </table>
