--- a/ui/hb-app/src/app/transactions/transactions.component.html
+++ b/ui/hb-app/src/app/transactions/transactions.component.html
@@ -14,6 +14,7 @@
       <th scope="col">Cykliczność</th>
       <th scope="col">Wych./Przych.</th>
       <th scope="col">Konto bankowe</th>
+      <th scope="col"></th>
     </tr>
     </thead>
     <tbody *ngFor="let t of cyclicTransactionDtos">
@@ -32,6 +33,7 @@
       <td>{{t.period}}</td>
       <td>{{t.costDirection}}</td>
       <td>{{t.bankAccountDto != null ? t.bankAccountDto.bankName : ''}}</td>
+      <td><a routerLink="/costCreate"><img src="assets/baseline_edit_black_48dp.png" width="20"/></a></td>
     </tr>
     </tbody>
   </table>
