--- a/ui/hb-app/src/app/transaction-modify/transaction-modify.component.html
+++ b/ui/hb-app/src/app/transaction-modify/transaction-modify.component.html
@@ -43,19 +43,21 @@
       <!--  TERMIN PŁATNOŚCI-->
       <div class="form-group col-md-4">
         <label for="costPayDate">Termin pierwszej płatności</label>
-        <input class="form-control"
-               type="date"
-               id="costPayDate"
-               name="costPayDate"
-               useValueAsDate
-               [(ngModel)]="oneTimeTrans.payDate"
-               [value]="oneTimeTrans.payDate"/>
+        <datetime
+          id="costPayDate"
+          name="costPayDate"
+          [timepicker]="false"
+          [datepicker]="datepickerOpts"
+          [(ngModel)]="oneTimeTrans.payDate"></datetime>
+
       </div>
     </div>
 
     <div class="form-group">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="hasBankAccount"
+        <input class="form-check-input" type="checkbox"
+               id="hasBankAccount"
+               name="hasBankAccount"
                [checked]="oneTimeTrans.bankAccountDto != null">
         <label class="form-check-label" for="hasBankAccount">
           Powiązać w kontem bankowym?
@@ -72,9 +74,8 @@
               [(ngModel)]="oneTimeTrans.bankAccountDto">
         <option *ngFor="let bank of bankAccounts"
                 [value]="bank.bankName + ' - ' + bank.accountNumber"
-                [selected]="oneTimeTrans.bankAccountDto != null && oneTimeTrans.bankAccountDto.id === bank.id">
-          {{bank.bankName + ' - ' +
-          bank.accountNumber}}
+                [selected]="oneTimeTrans.bankAccountDto.id == bank.id">
+          {{bank.bankName + ' - ' + bank.accountNumber}}
         </option>
       </select>
     </div>
