Fix date migration from json response

--- a/ui/hb-app/src/app/bank-account-form/bank-account-form.component.html
+++ b/ui/hb-app/src/app/bank-account-form/bank-account-form.component.html
@@ -41,7 +41,7 @@
           Proszę wybrać typ konta
         </div>
       </div>
-      <button type="submit" class="btn btn-success" [disabled]="!accountForm.form.valid">Dodaj</button>
+      <button type="submit" class="btn btn-success" [disabled]="!accountForm.form.valid">Zapisz</button>
     </form>
   </div>
 </div>
