--- a/ui/hb-app/src/app/onetime-transaction-modify/onetime-transaction-modify.component.html
+++ b/ui/hb-app/src/app/onetime-transaction-modify/onetime-transaction-modify.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <form>
+  <form (ngSubmit)="onSubmit()">
 
     <!--NAZWA WYDATKU/PRZYCHODU-->
     <div class="form-group">
@@ -36,6 +36,7 @@
           <input class="form-control"
                  id="costValue"
                  name="costValue"
+                 pattern="[0-9]*,[0-9]{2}"
                  [(ngModel)]="transaction.value"/>
         </div>
       </div>
@@ -73,12 +74,11 @@
               name="costBankAccount"
               [compareWith]="compareAccounts"
               [(ngModel)]="transaction.bankAccountDto">
-        <option *ngFor="let bank of (bankAccounts | async)"
-                [ngValue]="bank">
+        <option *ngFor="let bank of (bankAccounts | async)" [ngValue]="bank">
           {{bank.bankName + ' - ' + bank.accountNumber}}
         </option>
       </select>
     </div>
-    <button (ngSubmit)="onSubmit()" type="submit" class="btn btn-success">Dodaj</button>
+    <button type="submit" class="btn btn-success">Zapisz</button>
   </form>
 </div>
