--- a/ui/hb-app/src/app/transactions/transactions.component.html
+++ b/ui/hb-app/src/app/transactions/transactions.component.html
@@ -70,7 +70,7 @@
       </td>
       <td>{{oneTime.payDate | date:'dd-MM-yyyy'}}</td>
       <td>{{oneTime.costDirection}}</td>
-      <td>{{oneTime.bankAccountDto.bankName}}</td>
+      <td>{{oneTime.bankAccount.bankName}}</td>
       <td><a routerLink="/onetimeModify/{{oneTime.id}}"><img src="assets/baseline_edit_black_48dp.png" width="20"/></a></td>
       <td><a routerLink="/costCreate"><img src="assets/delete-outline.png" width="20"/></a></td>
     </tr>
