Changed cyclic dto model

--- a/ui/hb-app/src/app/onetime-transaction-modify/onetime-transaction-modify.component.html
+++ b/ui/hb-app/src/app/onetime-transaction-modify/onetime-transaction-modify.component.html
@@ -56,7 +56,7 @@
 
     <!--CZY POWIĄZAĆ KONTO BANKOWE ?-->
     <mat-checkbox id="hasBankAccount" name="hasBankAccount"
-                  [checked]="transaction.bankAccount != null">
+                  [checked]="transaction.bankAccountId != null">
       Powiązać w kontem bankowym?
     </mat-checkbox>
 
