--- a/ui/hb-app/src/app/component-bank-account/bank-account.component.css
+++ b/ui/hb-app/src/app/component-bank-account/bank-account.component.css
@@ -1,3 +1,7 @@
+.container-header{
+  margin-top: 50px;
+  margin-bottom: 50px
+}
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
