--- a/ui/hb-app/src/app/bank-account-form/bank-account-form.component.html
+++ b/ui/hb-app/src/app/bank-account-form/bank-account-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-header">
   <div class="card">
     <h5 class="card-header">Dodaj nowe konto</h5>
     <form class="card-body" (ngSubmit)="onSubmit()" #accountForm="ngForm">
