--- a/ui/hb-app/src/app/dashboard/dashboard.component.html
+++ b/ui/hb-app/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 24px;">
+<div class="container container-header">
   <div class="card" style="padding: 24px;">
     <h5 class="card-title">Podsumowanie</h5>
     <h6 class="card-subtitle  mb-2 text-muted">Następny okres rozliczeniowy za: {{daysPaycheck}} dni</h6>
