--- a/ui/hb-app/src/app/transactions/transactions.component.html
+++ b/ui/hb-app/src/app/transactions/transactions.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 50px; margin-bottom: 50px">
+<div class="container container-header">
 
   <!--TRANSAKCJE CYKLICZNE-->
   <h3 class="col-md-9">Operacje cykliczne</h3>
