--- a/ui/hb-app/src/app/onetime-transaction-modify/onetime-transaction-modify.component.html
+++ b/ui/hb-app/src/app/onetime-transaction-modify/onetime-transaction-modify.component.html
@@ -1,6 +1,6 @@
 <div class="container container-header">
 
-  <form (ngSubmit)="onSubmit()">
+  <form #oneTimeForm="ngForm"  (ngSubmit)="onSubmit()">
 
     <!--NAZWA WYDATKU/PRZYCHODU-->
     <mat-form-field class="form-element-full-width">
@@ -25,6 +25,7 @@
       <mat-form-field class="col-md-4">
         <mat-select id="costDirection" name="costDirection"
                     placeholder="Typ"
+                    required
                     [(ngModel)]="transaction.costDirection">
           <mat-option *ngFor="let direction of directions"
                       [value]="direction">{{direction}}
@@ -37,6 +38,7 @@
       <mat-form-field class="col-md-4">
         <input matInput id="costValue" name="costValue" class="form-text-right"
                placeholder="Wartość"
+               required
                pattern="[0-9]*.?[0-9]{0,2}"
                [(ngModel)]="transaction.value"/>
         <span matPrefix>$&nbsp;</span>
@@ -46,6 +48,7 @@
       <mat-form-field  class="col-md-4">
         <input matInput id="costPayDate" name="costPayDate"
                placeholder="Termin pierwszej płatności"
+               required
                [matDatepicker]="costPayDatePicker"
                [(ngModel)]="transaction.payDate">
         <mat-datepicker-toggle matSuffix [for]="costPayDatePicker"></mat-datepicker-toggle>
@@ -69,6 +72,6 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <button type="submit" class="btn btn-success">Zapisz</button>
+    <button type="submit" class="btn btn-success" [disabled]="!oneTimeForm.valid">Zapisz</button>
   </form>
 </div>
