--- a/ui/hb-app/src/app/cyclic-transaction-modify/cyclic-transaction-modify.component.html
+++ b/ui/hb-app/src/app/cyclic-transaction-modify/cyclic-transaction-modify.component.html
@@ -38,9 +38,10 @@
         <mat-select id="period" name="period"
                     placeholder="Cykliczność"
                     required
+                    [compareWith]="transactionPeriodCompare"
                     [(ngModel)]="transaction.period">
-          <mat-option *ngFor="let period of periods"
-                      [value]="period">{{period}}
+          <mat-option *ngFor="let period of (periods)"
+                      [value]="period">{{period.name}}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -91,6 +92,7 @@
     <mat-form-field class="form-element-full-width">
       <mat-select id="costBankAccount" name="costBankAccount"
                   placeholder="Konto bankowe"
+                  [disabled]="!accountAssigned"
                   [compareWith]="compareAccountFn"
                   [(ngModel)]="transaction.bankAccountId">
         <mat-option *ngFor="let bank of (bankAccounts | async)" [value]="bank.id">
